2024-05-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peep.c:
	  Parse ZX Spectrum Next nextreg instruction.

2024-05-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp,
	  src/hc08/gen.c:
	  Reject boost 1.85.0.

2024-05-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Skip leading zeroes on comparisons and some increments.

2024-05-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Use information from generalized constant propagation to optimize comparisons of signed types.

2024-05-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  z80 codegen improvements.

2024-05-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsalloc.hpp,
	  src/stm8/ralloc2.cc,
	  src/stm8/gen.c,
	  src/z80/ralloc2.cc:
	  Use stack parameter locations as spill locations in some simple cases.

2024-05-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3733.c:
	  Fix bug #3733.

2024-05-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/sha3-256.c:
	  SHA3-256 test assumes little endian, so disable it for other systems.

2024-05-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  mcs51 named address space clarifications.
	* support/regression/tests/sha3-256.c:
	  Test for bug #3731.

2024-05-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def:
	  Fix an issue in previous commit.

2024-04-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc,
	  src/z80/peeph.def:
	  Improve use of register a and (hl) in comparisons.

2024-04-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  Fix an issue in the handling of register hl vs a in write via pointer.

2024-04-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc:
	  Fix bug #3730.

2024-04-25 Philipp Klaus Krause <philipp@colecovision.eu>
